@@ -1,3 +1,9 @@
+2008-10-13  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * Applied a patch by Nick to make use of Geany Plugin API r99 and the
+   add item to toolbar function.
+
+
 2008-10-03  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * Implement a %b placeholder for adding basename of file to mailer command.
